[project]
name = "adaptive-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "pisakhov", email = "pisakhov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langgraph >=0.6.3,<0.7.0",
    "langchain >=0.3.27,<0.4.0",
    "langchain-openai >=0.3.28,<0.4.0",
    "pydantic >=2.11.7,<3.0.0",
    "python-dotenv >=1.0.0,<2.0.0",
    "rich (>=14.1.0,<15.0.0)",
    "langchain-groq (>=0.3.6,<0.4.0)",
    "langchain-cerebras (>=0.5.0,<0.6.0)",
    "langchain-deepseek (>=0.1.4,<0.2.0)",
    "pytz (>=2025.2,<2026.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core >=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
